@@ -14,13 +14,13 @@ import org.bukkit.event.player.PlayerInteractEvent;
 import org.bukkit.event.player.PlayerJoinEvent;
 import org.bukkit.inventory.ItemStack;
 import org.jetbrains.annotations.NotNull;
-import su.nexmedia.engine.api.manager.AbstractListener;
-import su.nexmedia.engine.utils.Colorizer;
-import su.nexmedia.engine.utils.EntityUtil;
-import su.nexmedia.engine.utils.ItemUtil;
-import su.nexmedia.engine.utils.PlayerUtil;
-import su.nightexpress.sunlight.SunLight;
-import su.nightexpress.sunlight.data.impl.SunUser;
+import su.nightexpress.nightcore.manager.AbstractListener;
+import su.nightexpress.nightcore.util.ItemUtil;
+import su.nightexpress.nightcore.util.Players;
+import su.nightexpress.nightcore.util.text.NightMessage;
+import su.nightexpress.nightcore.util.text.tag.TagPool;
+import su.nightexpress.sunlight.SunLightPlugin;
+import su.nightexpress.sunlight.data.user.SunUser;
 import su.nightexpress.sunlight.module.extras.ExtrasModule;
 import su.nightexpress.sunlight.module.extras.config.ExtrasConfig;
 import su.nightexpress.sunlight.module.extras.config.ExtrasPerms;
@@ -28,97 +28,96 @@ import su.nightexpress.sunlight.module.extras.config.ExtrasPerms;
 import java.util.List;
 import java.util.Set;
 
-public class ExtrasGenericListener extends AbstractListener<SunLight> {
+public class ExtrasGenericListener extends AbstractListener<SunLightPlugin> {
 
-    public ExtrasGenericListener(@NotNull ExtrasModule module) {
-        super(module.plugin());
+    public ExtrasGenericListener(@NotNull SunLightPlugin plugin, @NotNull ExtrasModule module) {
+        super(plugin);
     }
 
     @EventHandler(priority = EventPriority.MONITOR)
-    public void onJoinCommands(PlayerJoinEvent e) {
+    public void onJoinCommands(PlayerJoinEvent event) {
         if (!ExtrasConfig.JOIN_COMMANDS_ENABLED.get()) return;
 
-        Player player = e.getPlayer();
+        Player player = event.getPlayer();
         SunUser user = plugin.getUserManager().getUserData(player);
         List<String> commands;
-        if (user.isRecentlyCreated()) {
+        if (user.isNewlyCreated()) {
             commands = ExtrasConfig.JOIN_COMMANDS_FIRST.get();
         }
         else {
             commands = ExtrasConfig.JOIN_COMMANDS_DEFAULT.get();
         }
-        PlayerUtil.dispatchCommands(player, commands.toArray(new String[0]));
+        Players.dispatchCommands(player, commands);
     }
 
     @EventHandler(priority = EventPriority.HIGHEST, ignoreCancelled = true)
-    public void onSignsColor(SignChangeEvent e) {
+    public void onSignsColor(SignChangeEvent event) {
         if (!ExtrasConfig.SIGN_COLORS_ENABLED.get()) return;
 
-        Player player = e.getPlayer();
+        Player player = event.getPlayer();
         if (!player.hasPermission(ExtrasPerms.SIGNS_COLOR)) return;
 
-        for (int index = 0; index < e.getLines().length; index++) {
-            String line = e.getLine(index);
+        for (int index = 0; index < event.getLines().length; index++) {
+            String line = event.getLine(index);
             if (line != null) {
-                e.setLine(index, Colorizer.legacyHex(line));
+                event.setLine(index, NightMessage.from(line, TagPool.BASE_COLORS_AND_STYLES).toLegacy());
             }
         }
     }
 
     @EventHandler(priority = EventPriority.HIGHEST, ignoreCancelled = true)
-    public void onAnvilsColor(PrepareAnvilEvent e) {
+    public void onAnvilColor(PrepareAnvilEvent event) {
         if (!ExtrasConfig.ANVIL_COLORS_ENABLED.get()) return;
-        if (e.getViewers().isEmpty()) return;
+        if (event.getViewers().isEmpty()) return;
 
-        ItemStack result = e.getResult();
+        ItemStack result = event.getResult();
         if (result == null || result.getType().isAir()) return;
 
-        Player player = (Player) e.getViewers().get(0);
+        Player player = (Player) event.getViewers().getFirst();
         if (!player.hasPermission(ExtrasPerms.ANVILS_COLOR)) return;
 
-        ItemUtil.mapMeta(result, meta -> {
-            meta.setDisplayName(Colorizer.legacyHex(meta.getDisplayName()));
+        ItemUtil.editMeta(result, meta -> {
+            meta.setDisplayName(NightMessage.from(meta.getDisplayName(), TagPool.BASE_COLORS_AND_STYLES).toLegacy());
         });
-        e.setResult(result);
+        event.setResult(result);
     }
 
     @EventHandler(priority = EventPriority.LOWEST)
-    public void onPlayerDeath(PlayerDeathEvent e) {
+    public void onKeepInventoryDeath(PlayerDeathEvent event) {
         if (!ExtrasConfig.KEEP_INVENTORY_ENABLED.get()) return;
 
-        Player player = e.getEntity();
-        if (EntityUtil.isNPC(player)) return;
+        Player player = event.getEntity();
 
-        Set<String> ranks = PlayerUtil.getPermissionGroups(player);
-        if (ranks.stream().anyMatch(rank -> ExtrasConfig.KEEP_INVENTORY_EXP_RANKS.get().contains(rank))) {
-            e.setKeepLevel(true);
-            e.setDroppedExp(0);
+        Set<String> ranks = Players.getPermissionGroups(player);
+        if (ranks.stream().anyMatch(rank -> ExtrasConfig.KEEP_INVENTORY_XP_RANKS.get().contains(rank))) {
+            event.setKeepLevel(true);
+            event.setDroppedExp(0);
         }
         if (ranks.stream().anyMatch(rank -> ExtrasConfig.KEEP_INVENTORY_ITEMS_RANKS.get().contains(rank))) {
-            e.setKeepInventory(true);
-            e.getDrops().clear();
+            event.setKeepInventory(true);
+            event.getDrops().clear();
         }
     }
 
     @EventHandler(priority = EventPriority.HIGHEST, ignoreCancelled = true)
-    public void onFarmKillerEnderEndermite(EntityTargetEvent e) {
+    public void onFarmKillerEnderEndermite(EntityTargetEvent event) {
         if (!ExtrasConfig.ANTI_FARM_ENDERMITE_MINECART.get()) return;
-        if (!(e.getEntity() instanceof Enderman enderman)) return;
-        if (!(e.getTarget() instanceof Endermite endermite)) return;
+        if (!(event.getEntity() instanceof Enderman enderman)) return;
+        if (!(event.getTarget() instanceof Endermite endermite)) return;
 
-        e.setCancelled(endermite.isInsideVehicle());
+        event.setCancelled(endermite.isInsideVehicle());
     }
 
     @EventHandler(priority = EventPriority.HIGHEST)
-    public void onFarmKillerFishingAuto(PlayerInteractEvent e) {
+    public void onFarmKillerFishingAuto(PlayerInteractEvent event) {
         if (!ExtrasConfig.ANTI_FARM_AUTO_FISHING.get()) return;
-        if (e.useInteractedBlock() == Event.Result.DENY) return;
-        if (e.useItemInHand() == Event.Result.DENY) return;
+        if (event.useInteractedBlock() == Event.Result.DENY) return;
+        if (event.useItemInHand() == Event.Result.DENY) return;
 
-        Block block = e.getClickedBlock();
+        Block block = event.getClickedBlock();
         if (block == null) return;
 
-        Player player = e.getPlayer();
+        Player player = event.getPlayer();
         ItemStack main = player.getInventory().getItemInMainHand();
         ItemStack off = player.getInventory().getItemInOffHand();
         if (!this.isFishingRod(main) && !this.isFishingRod(off)) return;
@@ -127,7 +126,7 @@ public class ExtrasGenericListener extends AbstractListener<SunLight> {
         if (!blockType.isInteractable() && blockType.isSolid()) return;
 
         player.getNearbyEntities(16D, 16D, 16).stream()
-            .filter(entity -> entity.getType() == EntityType.FISHING_HOOK).map(entity -> (FishHook) entity)
+            .filter(entity -> entity instanceof FishHook).map(entity -> (FishHook) entity)
             .filter(fishHook -> fishHook.getShooter() instanceof Player && fishHook.getShooter().equals(player))
             .forEach(Entity::remove);
     }
